# shutdowns

./: .env  .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_SECURITY.md  DEVELOPER_GUIDE.md  Dockerfile  Dockerfile.bot  Dockerfile.parser  MARKETING_PROPOSAL.md  README.md  README_ua.md  SECURITY.md  TODO.md  api.py  bot.py  cek_bot.db  cek_bot.db-shm  cek_bot.db-wal  docker-compose.yml  dtek_disconnection_gemini.py  dtek_disconnection_prompt_service.txt  dtek_parser.py  dtek_parser_api.py  dtek_parser_prompt.txt  dtek_parser_service.py  dtek_parser_service_prompt.txt  dtek_telegram_bot.py  dtek_telegram_bot_prompt.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  security_middleware.py  setup_dev.sh
cek/: __init__.py  cek_parser.py  data_source.py  requirements.txt  test_cek_form.py
common/: __init__.py  bot_base.py  data_source.py  formatting.py  handlers.py  handlers_group_subscription.py  log_context.py  logging_config.py  middleware.py  migrate.py  subscription_checker_v2.py  tasks.py  visualization.py
docs/: CACHING_AND_SUBSCRIPTIONS.md  CURRENT_OUTAGE_TESTING.md  DATA_SOURCES.md  Dockerfile.with-tests.example  GROUP_CHECK_FEATURE.md  GROUP_NOTIFICATIONS_PLAN.md  GROUP_SUBSCRIPTION_IMPLEMENTATION.md  LOGGING_ARCHITECTURE.md  LOGGING_CLEANUP.md  REFACTORING_COMPLETE_2025-12-11.md  SAFE_DEPLOYMENT.md  SUBSCRIPTION_CHECKER_REFACTOR.md  TESTING_GROUP_FEATURES.md  USER_CONTEXT_IN_TASKS.md  USER_CONTEXT_LOGGING.md  WEBSOCKET_LOG_SUPPRESSION.md  WIP_SUBSCRIPTION_CHECKER.md  database_normalization_plan.md  (+5 more)
dtek/: .env  .gitignore  (+13 more)
(+75 files in other folders)
