[project]
name = "shutdowns"
version = "1.0.0"
description = "Telegram bots for power shutdown schedules (DTEK and CEK)"
requires-python = ">=3.13,<3.15"
dependencies = [
    "aiogram>=3.7.0",
    "python-dotenv",
    "pytz",
    "aiosqlite",
    "Pillow>=9.0.0",
    "aiohttp",
    "httpx",
    "fastapi",
    "uvicorn",
    "requests",
    "botasaurus==4.0.94",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "aioresponses",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short"
testpaths = [
    "common/tests",
    "dtek/tests",
    "cek/tests",
]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "db: Database tests",
    "visualization: Visualization tests",
]
